Updating main configs

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,14 +2,15 @@
 GameName=BoS
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/BoS/Maps/MapServerLobby.MapServerLobby
+GameDefaultMap=/Game/BoS/Maps/MapClientMainMenu.MapClientMainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
+ServerDefaultMap=/Game/BoS/Maps/MapServerLobby.MapServerLobby
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
