Update asset manager

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -60,6 +60,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/BoS")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/BoS")
+AssetManagerClassName=/Script/BoS.BosAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
