--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -76,3 +76,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/BoS.BosGasAc",NewName="/Script/BoS.BosAsc")
