--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,3 +79,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/BoS.BosGasAc",NewName="/Script/BoS.BosAsc")
++ClassRedirects=(OldName="/Script/BoS.BosGameplayAbilite",NewName="/Script/BoS.BosGameplayAbility")
