Character in progress

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -80,3 +80,7 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/BoS.BosGasAc",NewName="/Script/BoS.BosAsc")
 +ClassRedirects=(OldName="/Script/BoS.BosGameplayAbilite",NewName="/Script/BoS.BosGameplayAbility")
++ClassRedirects=(OldName="/Script/BoS.BosCharacter",NewName="/Script/BoS.BosCharacterBase")
++ClassRedirects=(OldName="/Script/BoS.BosCharacter",NewName="/Script/BoS.BosCharacterBase")
++ClassRedirects=(OldName="/Script/BoS.BosCharacter",NewName="/Script/BoS.BosCharacterPlayer")
++ClassRedirects=(OldName="/Script/BoS.BosCharacterPlayr",NewName="/Script/BoS.BosCharacterPlayer")
