--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,7 +9,10 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.NotCanceledByStun",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Debuff.Bleeding",DevComment="")
++GameplayTagList=(Tag="State.Buff.Pure",DevComment="")
 +GameplayTagList=(Tag="State.Dead",DevComment="")
++GameplayTagList=(Tag="State.Debuff.Bleeding",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Stun",DevComment="")
 +GameplayTagList=(Tag="State.RemoveOnDeath",DevComment="")
 
