--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,6 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
 ServerDefaultMap=/Game/Development/Maps/testLight_005.testLight_005
+GameInstanceClass=/Game/BoS/BP_GameInstance.BP_GameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
@@ -84,3 +85,4 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/BoS.BosCharacter",NewName="/Script/BoS.BosCharacterBase")
 +ClassRedirects=(OldName="/Script/BoS.BosCharacter",NewName="/Script/BoS.BosCharacterPlayer")
 +ClassRedirects=(OldName="/Script/BoS.BosCharacterPlayr",NewName="/Script/BoS.BosCharacterPlayer")
+
