--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -85,4 +85,8 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/BoS.BosCharacter",NewName="/Script/BoS.BosCharacterBase")
 +ClassRedirects=(OldName="/Script/BoS.BosCharacter",NewName="/Script/BoS.BosCharacterPlayer")
 +ClassRedirects=(OldName="/Script/BoS.BosCharacterPlayr",NewName="/Script/BoS.BosCharacterPlayer")
++FunctionRedirects=(OldName="/Script/BoS.BosCharacterPlayer.SetHasBlock",NewName="/Script/BoS.BosCharacterPlayer.SetHasSprint")
++FunctionRedirects=(OldName="/Script/BoS.BosCharacterPlayer.SetHasBlock",NewName="/Script/BoS.BosCharacterPlayer.SetHasSprint")
++FunctionRedirects=(OldName="/Script/BoS.BosCharacterPlayer.OnRep_HasBlock",NewName="/Script/BoS.BosCharacterPlayer.OnRep_HasSprint")
++FunctionRedirects=(OldName="/Script/BoS.BosCharacterPlayer.OnRep_HasBlock",NewName="/Script/BoS.BosCharacterPlayer.OnRep_HasSprint")
 
